--- a/action.yaml
+++ b/action.yaml
@@ -22,7 +22,7 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v2
-    - uses: erlef/setup-elixir@v1
+    - uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ inputs.elixir-version }}
         otp-version: ${{ inputs.erlang-version }}
