Make code checkout optional
[Story](https://rentpath.atlassian.net/browse/SRV-3719)

If code checkout is optional that step can be interleaved with other
steps which start test depedencies

--- a/action.yaml
+++ b/action.yaml
@@ -13,6 +13,11 @@ inputs:
   mix-env:
     required: true
     type: string
+  skip-checkout:
+    description: 'Optionally skip performing the code checkout.'
+    required: false
+    default: false
+    type: boolean
 outputs:
   cache-key:
     value: ${{ steps.compute-cache-key.outputs.cache-key }}
@@ -22,6 +27,7 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v2
+      if: inputs.skip-checkout == false
     - uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ inputs.elixir-version }}
