--- a/action.yaml
+++ b/action.yaml
@@ -21,6 +21,11 @@ inputs:
     required: false
     default: 'false'
     type: string
+  github-repository:
+    description: 'Optionally specify the repository against which to authenticate. Must be included if the `github-token` option is used.'
+    required: false
+    default: 'false'
+    type: string
   github-token:
     description: 'Optionally rewrite all GitHub URLs to authenticate with a personal access token.'
     required: false
@@ -63,7 +68,15 @@ runs:
       shell: bash
       if: inputs.github-token != 'false'
       run: |
-        git config --global url.https://${{ inputs.github-token }}@github.com/.insteadOf git@github.com:
+        git remote set-url origin https://$DEPLOY_ACTOR:$DEPLOY_TOKEN@github.com/rentpath/${REPOSITORY}
+        git config --global user.email "idg.dx.bot.workflow@rentpath.com"
+        git config --global user.name "rentpath-workflow-bot"
+        git config --global http.http.https://github.com/.extraheader "AUTHORIZATION: bearer ${DEPLOY_TOKEN}"
+      env:
+        DEPLOY_ACTOR: rentpath-workflow-bot
+        DEPLOY_TOKEN: ${{ inputs.github_token }}
+        REPOSITORY: ${{ inputs.github_repository }}
+
     - id: cache-dependencies
       uses: actions/cache@v3
       with:
