--- a/action.yaml
+++ b/action.yaml
@@ -22,7 +22,7 @@ inputs:
     default: 'false'
     type: string
   github-repository:
-    description: 'Optionally specify the repository against which to authenticate. Must be included if the `github-token` option is used.'
+    description: 'Optionally specify the repo (format: <organization/repository>) against which to authenticate. Must be included if the `github-token` option is used.'
     required: false
     default: 'false'
     type: string
@@ -68,14 +68,15 @@ runs:
       shell: bash
       if: inputs.github-token != 'false'
       run: |
-        git remote set-url origin https://$DEPLOY_ACTOR:$DEPLOY_TOKEN@github.com/rentpath/${REPOSITORY}
+        git remote set-url origin https://$DEPLOY_ACTOR:$DEPLOY_TOKEN@github.com/${OWNER_AND_REPOSITORY}
+        git config --global url.https://${DEPLOY_TOKEN}@github.com/.insteadOf git@github.com:
         git config --global user.email "idg.dx.bot.workflow@rentpath.com"
         git config --global user.name "rentpath-workflow-bot"
         git config --global http.http.https://github.com/.extraheader "AUTHORIZATION: bearer ${DEPLOY_TOKEN}"
       env:
         DEPLOY_ACTOR: rentpath-workflow-bot
         DEPLOY_TOKEN: ${{ inputs.github_token }}
-        REPOSITORY: ${{ inputs.github_repository }}
+        OWNER_AND_REPOSITORY: ${{ inputs.github_repository }}
 
     - id: cache-dependencies
       uses: actions/cache@v3
