--- a/action.yaml
+++ b/action.yaml
@@ -68,14 +68,15 @@ runs:
       shell: bash
       if: inputs.github-token != 'false'
       run: |
-        git remote set-url origin https://$DEPLOY_ACTOR:$DEPLOY_TOKEN@github.com/${OWNER_AND_REPOSITORY}
-        git config --global url.https://${DEPLOY_TOKEN}@github.com/.insteadOf git@github.com:
+        GITHUB_URL="https://${ACTOR}:${TOKEN}@github.com/"
+        git remote set-url origin "${GITHUB_URL}${OWNER_AND_REPOSITORY}"
+        git config --global url.${GITHUB_URL}.insteadOf git@github.com:
         git config --global user.email "idg.dx.bot.workflow@rentpath.com"
         git config --global user.name "rentpath-workflow-bot"
         git config --global http.http.https://github.com/.extraheader "AUTHORIZATION: bearer ${DEPLOY_TOKEN}"
       env:
-        DEPLOY_ACTOR: rentpath-workflow-bot
-        DEPLOY_TOKEN: ${{ inputs.github_token }}
+        ACTOR: rentpath-workflow-bot
+        TOKEN: ${{ inputs.github_token }}
         OWNER_AND_REPOSITORY: ${{ inputs.github_repository }}
 
     - id: cache-dependencies
