--- a/action.yaml
+++ b/action.yaml
@@ -74,6 +74,7 @@ runs:
         git config --global user.email "idg.dx.bot.workflow@rentpath.com"
         git config --global user.name "rentpath-workflow-bot"
         git config --global http.http.https://github.com/.extraheader "AUTHORIZATION: bearer ${DEPLOY_TOKEN}"
+        git config --global -l
       env:
         ACTOR: rentpath-workflow-bot
         TOKEN: ${{ inputs.github_token }}
@@ -92,3 +93,12 @@ runs:
       if: steps.cache-dependencies.outputs.cache-hit == false
       run: mix do deps.get, deps.compile --skip-umbrella-children
       shell: bash
+
+    - name: Reset git configuration to ssh defaults
+      shell: bash
+      run: |
+        git config --unset --global url.url
+        git config --unset --global http.http
+        git config --unset --global user.email
+        git config --unset --global user.name
+        git config --global -l
